<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_neighbour"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAECEE"
    tools:context=".profile.ProfileActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatFav"
        android:backgroundTint="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:focusable="true"
...
